kubernetes/44_deployment_elasticsearch.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: zammad-elasticsearch
  namespace: zammad
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: searchindex
        app: elasticsearch
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
      - name: zammad-elasticsearch
        persistentVolumeClaim:
          claimName: zammad-elasticsearch

      containers:
      - name: zammad-elasticsearch
        image: monotek/zammad-docker-compose:zammad-elasticsearch
        ports:
        - name: elasticsearch
          containerPort: 9200
        imagePullPolicy: Always
        volumeMounts:
        - name: zammad-elasticsearch
          mountPath: /usr/share/elasticsearch/data
