kubernetes/53_statefulset_websocket.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: zammad-websocket
  namespace: zammad
  labels:
    component: websocket
    app: zammad
spec:
  serviceName: zammad-websocket
  replicas: 1
  template:
    metadata:
      labels:
        component: websocket
        app: zammad
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
      - name: zammad-home
        persistentVolumeClaim:
          claimName: zammad-home
      containers:
      - name: zammad-websocket
        image: zammad/zammad-docker-compose:zammad
        args: [ "zammad-websocket" ]
        ports:
        - containerPort: 6042
          name: websocket
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /home/zammad
          name: zammad-home
