kubernetes/80_svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: zammad
  namespace: zammad
  labels:
    app: zammad
    component: services
spec:
  ports:
  - name: nginx
    port: 80
  selector:
    app: zammad
    component: services
  type: NodePort

---
kind: Service
apiVersion: v1
metadata:
  name: zammad-elasticsearch
  namespace: zammad
  labels:
    app: elasticsearch
    component: searchindex
spec:
  ports:
  - name: elasticsearch
    port: 9200
  selector:
    app: elasticsearch
    component: searchindex
  type: NodePort

---
kind: Service
apiVersion: v1
metadata:
  name: zammad-memcached
  namespace: zammad
  labels:
    app: memcached
    component: cache
spec:
  ports:
  - name: memcached
    port: 11211
  selector:
    app: memcached
    component: cache
  type: NodePort

---
kind: Service
apiVersion: v1
metadata:
  name: zammad-postgresql
  namespace: zammad
  labels:
    app: postgresql
    component: database
spec:
  ports:
  - name: postgresql
    port: 5432
  selector:
    app: postgresql
    component: database
  type: NodePort
