kubernetes/90_ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: zammad.example.com
  namespace: zammad
  labels:
    component: website
    app: zammad
    host: zammad.example.com
  annotations:
    ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/tls-acme: 'true'
spec:
  tls:
    - hosts:
      - zammad.example.com
      secretName: zammad-example-com-tls
  rules:
    - host: zammad.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: zammad-nginx
              servicePort: 80
